// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> Image with local SVG 1`] = `
<rectangle
  height={100}
  innerRef={
    Object {
      "current": undefined,
    }
  }
  source="'./logo.svg'"
  style={
    Object {
      "backgroundImage": "'./logo.svg'",
      "backgroundSize": undefined,
      "height": 100,
      "width": 100,
    }
  }
  width={100}
/>
`;

exports[`<Image /> Image with remote SVG 1`] = `
<rectangle
  height={100}
  innerRef={
    Object {
      "current": undefined,
    }
  }
  source={
    Object {
      "uri": "https://raw.githubusercontent.com/react-figma/react-figma/dfa655881c7944a8ec76ef9758c92a480ae27959/logo.svg",
    }
  }
  style={
    Object {
      "backgroundImage": Object {
        "uri": "https://raw.githubusercontent.com/react-figma/react-figma/dfa655881c7944a8ec76ef9758c92a480ae27959/logo.svg",
      },
      "backgroundSize": undefined,
      "height": 100,
      "width": 100,
    }
  }
  width={100}
/>
`;

exports[`<Image /> Image with resizeMode prop 1`] = `
<rectangle
  height={200}
  innerRef={
    Object {
      "current": undefined,
    }
  }
  resizeMode="stretch"
  source="./image.png"
  style={
    Object {
      "backgroundImage": "./image.png",
      "backgroundSize": "stretch",
      "height": 200,
      "width": 100,
    }
  }
  width={100}
/>
`;

exports[`<Image /> Image with source and layout style properties 1`] = `
<rectangle
  height={200}
  innerRef={
    Object {
      "current": undefined,
    }
  }
  source="./image.png"
  style={
    Object {
      "backgroundImage": "./image.png",
      "backgroundSize": undefined,
      "height": 200,
      "width": 100,
    }
  }
  width={100}
/>
`;
